package ma.farm.dao;

public class EggProductionDAO {
}
