package ma.farm.dao;

public class FeedDAO {
}
