package ma.farm.dao;

public class HouseDAO {
}
