package ma.farm.dao;

public class MedicationDAO {
}
