package ma.farm.dao;

public class PersonnelDAO {
}
