package ma.farm.model;

public class Chicken {
}
