package ma.farm.model;

public class EggProduction {
}
