package ma.farm.model;

public class Equipment {
}
