package ma.farm.model;

public class Feed {
}
