package ma.farm.model;

public class House {
}
