package ma.farm.model;

public class Medication {
}
