package ma.farm.model;

public class Mortality {
}
