package ma.farm.model;

public class Personnel {
}
