package ma.farm.model;

public class Task {
}
