package ma.farm.util;

public class NavigationUtil {
}
