package ma.farm.util;

public class ValidationUtil {
}
