package ma.farm.view;

public class ChickenBayView {
}
