package ma.farm.view;

public class DashboardView {
}
