@startuml Diagram_6_Complete_Architecture

title Diagram 6: Complete Architecture Overview

' ========================================
' SIMPLIFIED CLASSES FOR OVERVIEW
' ========================================

package "model" {
  class User
  class House
  class Chicken
  class Mortality
  class EggProduction
  class Feed
  class Medication
  class Equipment
  class Task
  class Personnel
}

package "dao" {
  class DatabaseConnection
  class UserDAO
  class HouseDAO
  class ChickenDAO
  class MortalityDAO
  class EggProductionDAO
  class FeedDAO
  class MedicationDAO
  class EquipmentDAO
  class TaskDAO
  class PersonnelDAO
}

package "controller" {
  class LoginController
  class DashboardController
  class ChickenBayController
  class EggsBayController
  class StorageController
  class TasksController
  class PersonnelController
}

package "view" {
  class LoginView
  class DashboardView
  class ChickenBayView
  class EggsBayView
  class StorageView
  class TasksView
  class PersonnelView
}

package "util" {
  class NavigationUtil
  class ValidationUtil
  class DateUtil
}

class App

' ========================================
' HIGH-LEVEL RELATIONSHIPS
' ========================================

' DAO to DatabaseConnection
UserDAO --> DatabaseConnection
HouseDAO --> DatabaseConnection
ChickenDAO --> DatabaseConnection
MortalityDAO --> DatabaseConnection
EggProductionDAO --> DatabaseConnection
FeedDAO --> DatabaseConnection
MedicationDAO --> DatabaseConnection
EquipmentDAO --> DatabaseConnection
TaskDAO --> DatabaseConnection
PersonnelDAO --> DatabaseConnection

' DAO to Model
UserDAO --> User : manages
HouseDAO --> House : manages
ChickenDAO --> Chicken : manages
MortalityDAO --> Mortality : manages
EggProductionDAO --> EggProduction : manages
FeedDAO --> Feed : manages
MedicationDAO --> Medication : manages
EquipmentDAO --> Equipment : manages
TaskDAO --> Task : manages
PersonnelDAO --> Personnel : manages

' Controller to DAO
LoginController --> UserDAO : uses
DashboardController --> ChickenDAO : uses
DashboardController --> EggProductionDAO : uses
DashboardController --> MortalityDAO : uses
ChickenBayController --> HouseDAO : uses
ChickenBayController --> ChickenDAO : uses
ChickenBayController --> MortalityDAO : uses
EggsBayController --> EggProductionDAO : uses
EggsBayController --> HouseDAO : uses
EggsBayController --> MortalityDAO : uses
StorageController --> FeedDAO : uses
StorageController --> MedicationDAO : uses
StorageController --> EquipmentDAO : uses
TasksController --> TaskDAO : uses
TasksController --> PersonnelDAO : uses
PersonnelController --> PersonnelDAO : uses

' Controller to View
LoginController ..> DashboardView : navigates
DashboardController ..> ChickenBayView : navigates
DashboardController ..> EggsBayView : navigates
DashboardController ..> StorageView : navigates
DashboardController ..> TasksView : navigates
DashboardController ..> PersonnelView : navigates

' Controllers use Utilities
LoginController ..> ValidationUtil : uses
LoginController ..> NavigationUtil : uses
DashboardController ..> DateUtil : uses
ChickenBayController ..> DateUtil : uses
ChickenBayController ..> ValidationUtil : uses
EggsBayController ..> DateUtil : uses
StorageController ..> ValidationUtil : uses
TasksController ..> DateUtil : uses
TasksController ..> ValidationUtil : uses
PersonnelController ..> ValidationUtil : uses

' App launches views
App ..> LoginView : starts_with
App ..> NavigationUtil : uses

' ========================================
' ARCHITECTURE LAYERS
' ========================================

note top of model
  <b>PRESENTATION LAYER</b>
  Views + Controllers
  
  Handles user interaction
  and UI rendering
end note

note top of dao
  <b>DATA ACCESS LAYER</b>
  DAOs + DatabaseConnection
  
  Handles database operations
  and data persistence
end note

note top of controller
  <b>BUSINESS LOGIC LAYER</b>
  Controllers + Utilities
  
  Handles application logic
  and data processing
end note

note right of App
  <b>MVC ARCHITECTURE</b>
  
  Model: Entity classes (domain objects)
  View: FXML files + View classes
  Controller: Controller classes
  
  <b>Additional Layers:</b>
  DAO: Data Access Objects
  Util: Helper utilities
end note

note left of DatabaseConnection
  <b>DATA FLOW:</b>
  
  User Input → View
         ↓
  View → Controller
         ↓
  Controller → DAO
         ↓
  DAO → Database
         ↓
  Database → DAO
         ↓
  DAO → Model Objects
         ↓
  Model → Controller
         ↓
  Controller → View
         ↓
  View → User Display
end note

@enduml